# vscode_cmake_example

./: .gitignore  CMakeLists.txt  README.md  dummy_2.txt
.github/workflows/: cmake.yml
src/: AddClass.cpp  AddClass.hpp  CMakeLists.txt  MultiplyClass.hpp  MultiplyTest.cpp  dummy.txt
tests/: CMakeLists.txt  checker.cpp  checker.hpp
tests/test_add/: CMakeLists.txt  main.cpp
tests/test_multiply/: CMakeLists.txt  main.cpp
